--- a/folgenUndReihen.tex
+++ b/folgenUndReihen.tex
@@ -186,29 +186,29 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
 
 \subsection{Bekannte Reihen}
 \resizebox{\columnwidth}{!}{\begin{tabular}{l | l | c | c | c}
-    \multicolumn{2}{l |}{Reihe}                                      & Wert                                         & konv.               & div.\\\hline
-    \multicolumn{2}{l |}{Geometrische Reihe}                         & $q \in \C$                                   &                     & \\\hline
-    $\sum_{k=0}^{\infty} aq^k$                                       & $a + aq +$                                   & $\frac{a}{1-q}$     & $|g| < 1$    & $|q| \ge 1$\\\hline
-    $\sum_{k=0}^{\infty} (k+1)q^k$                                   & $1 + 2q +$                                   & $\frac{1}{(1-q)^2}$ &              & \\\hline
-    \multicolumn{2}{l |}{Harmonische Reihe}                          &                                              &                     & \\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k}$                                &                                              & $\infty$            &              & \\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k^2}$                              &                                              & $\frac{\pi^2}{6}$   &              & \\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k^4}$                              &                                              & $\frac{\pi^4}{90}$  &              & \\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k^a}$                              &                                              &                     & $a > 1$      & $a \le 1$\\\hline
-    \multicolumn{2}{l |}{Alternierende Harmon. Reihe}                &                                              &                     & \\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k}$                       &                                              & $\ln 2$             &              & \\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^2}$                     &                                              & $\frac{\pi^2}{12}$  &              & \\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^4}$                     &                                              & $\frac{\pi^4}{720}$ &              & \\\hline
-    $\sum_{k=0}^{\infty} \frac{(-1)^k}{2k + 1}$                      & $1 - \frac{1}{3} + \frac{1}{5} -$            & $\frac{\pi}{4}$     &              & \\\hline
-    \multicolumn{1}{l |}{Teleskopreihe}                              &                                              &                     & \\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k(k+1)}$                           &                                              & $1$                 &              & \\\hline
-    \multicolumn{3}{l |}{Exponentialfunktion $z \in \C,$ konv. abs.} &                                              & \\\hline
-    $\sum_{k=0}^{\infty} \frac{z^k}{k!}$                             & $1 + z + \frac{z^2}{2!} +$                   & $\exp{z}$           &              & \\\hline
-    $\sum_{k=0}^{\infty} \frac{(-1)^k}{k!}$                          &                                              & $\frac{1}{e}$       &              & \\\hline
+    \multicolumn{2}{l |}{Reihe}                                      & Wert                                   & konv.               & div.\\\hline
+    \multicolumn{2}{l |}{Geometrische Reihe}                         & $q \in \C$                             &                     & \\\hline
+    $\sum_{k=0}^{\infty} aq^k$                                       & $a + aq +$                             & $\frac{a}{1-q}$     & $|g| < 1$    & $|q| \ge 1$\\\hline
+    $\sum_{k=0}^{\infty} (k+1)q^k$                                   & $1 + 2q +$                             & $\frac{1}{(1-q)^2}$ &              & \\\hline
+    \multicolumn{2}{l |}{Harmonische Reihe}                          &                                        &                     & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k}$                                &                                        & $\infty$            &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^2}$                              &                                        & $\frac{\pi^2}{6}$   &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^4}$                              &                                        & $\frac{\pi^4}{90}$  &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^a}$                              &                                        &                     & $a > 1$      & $a \le 1$\\\hline
+    \multicolumn{2}{l |}{Alternierende Harmon. Reihe}                &                                        &                     & \\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k}$                       &                                        & $\ln 2$             &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^2}$                     &                                        & $\frac{\pi^2}{12}$  &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^4}$                     &                                        & $\frac{\pi^4}{720}$ &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{(-1)^k}{2k + 1}$                      & $1 - \frac{1}{3} + \frac{1}{5} -$      & $\frac{\pi}{4}$     &              & \\\hline
+    \multicolumn{1}{l |}{Teleskopreihe}                              &                                        &                     & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k(k+1)}$                           &                                        & $1$                 &              & \\\hline
+    \multicolumn{3}{l |}{Exponentialfunktion $z \in \C,$ konv. abs.} &                                        & \\\hline
+    $\sum_{k=0}^{\infty} \frac{z^k}{k!}$                             & $1 + z + \frac{z^2}{2!} +$             & $\exp{z}$           &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{(-a)^k}{k!}$                          &                                        & $\frac{1}{e^a}$       &              & \\\hline
     $\sum_{k=0}^{\infty} (-1)^k\frac{x^{2k+1}}{(2k+1)!}$             & $x -\frac{x^3}{3!} + \frac{x^5}{5!} -$ & $ \sin x$           &              & \\\hline
-    $\sum_{k=0}^{\infty} (-1)^k\frac{x^{2k}}{(2k)!}$                 & $1-\frac{x^2}{2}+\frac{x^4}{4!}-$       & $\cos x$            &              & \\\hline
-    $\sum_{k=0}^{\infty} \frac{x^{2k+1}}{(2k+1)!}$                   & $x+\frac{x^3}{3!}+\frac{x^5}{5!}+$      & $\sinh x$           &              & \\\hline
-    $\sum_{k=0}^{\infty} \frac{x^{2k}}{(2k)!}$                       & $1+\frac{x^2}{2}+\frac{x^4}{4!}+$       & $\cosh x$           &              & \\\hline
+    $\sum_{k=0}^{\infty} (-1)^k\frac{x^{2k}}{(2k)!}$                 & $1-\frac{x^2}{2}+\frac{x^4}{4!}-$      & $\cos x$            &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{x^{2k+1}}{(2k+1)!}$                   & $x+\frac{x^3}{3!}+\frac{x^5}{5!}+$     & $\sinh x$           &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{x^{2k}}{(2k)!}$                       & $1+\frac{x^2}{2}+\frac{x^4}{4!}+$      & $\cosh x$           &              & \\\hline
 \end{tabular}}
 
 \subsection{Rechenregeln}
