--- a/general.tex
+++ b/general.tex
@@ -121,34 +121,23 @@ $y = \log_a x \iff a^x = x$
 \subsection{Sonstiges}
 \begin{compactitem}
     \item $x_{1 / 2} = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}$
-    \item $e^{ix} = \cos(x) + i \sin(x)$
     \item $\sqrt{i} = \frac{\sqrt{2}}{2} + i \frac{\sqrt{2}}{2}$
 \end{compactitem}
-
-\subsubsection{Substitutionstabelle}
-\begin{tabular}{l | c | c}
-    $\int F(x) \mathrm{d}x, F(x)=$ & $u=$ & $dx=$\\\hline
-    $e^x, \sinh(x), \cosh(x)$ &  
-\end{tabular}
 
 \subsubsection{Bekannte Integrale}
 \begin{tabular}{l | l}
     $f(x)$                      & $F(x)$\\\hline
     $\sin^2(x)$                 & $\frac{x - \sin(x) \cos(x)}{2}$\\
     $\cos^2(x)$                 & $\frac{x + \sin(x) \cos(x)}{2}$\\
-    true?&\\
-    $\sin(kx) \cdot \cos(kx)$   & $\frac{1}{4k}\cos(2kx)$\\
-    $\sin(kx) \cdot \cos(kx)$   & $\frac{-(\cos(x))^2}{2}$\\
+    $\sin(kx) \cdot \cos(kx)$   & $-\frac{1}{4k}\cos(2kx) = \frac{-(\cos(x))^2}{2}$\\
     $\frac{x^2}{x^2 + 1}$       & $x - \arctan(x)$\\
     $\frac{1}{(1 + x^2)^2}$     & $\frac{\frac{x}{x^2 + 1} + \arctan(x)}{2}$\\
-    true?&\\
     $\frac{u'(x)}{u(x)}$        & $\ln |u(x)|$\\
-    true?&\\
     $u'(x) \cdot u(x)$          & $\frac{1}{2}(u(x)^2)$\\
     $\sqrt{a^2 - x^2}$          & $\frac{a^2 \arcsin(\frac{x}{|a|})}{2} + \frac{x \sqrt{a^2 - x^2}}{2}$\\
     $\sqrt{a^2 + x^2}$          & $\frac{a^2 \ln(| \sqrt{x^2 + a^2} +x|)}{2} + \frac{x \sqrt{a^2 + x^2}}{2}$\\
     $a^x \cdot \ln(a), \ a > 0$ & $a^x$\\
     $x^x (1 + \ln x)$           & $x^x, \ x > 0$\\
-    true?&\\
     $e^{\ln |x|}(\ln(|x|) + 1)$ & $|x|^x = e^{x \ln x}$\\
+    $\frac{1}{(x + a)^2}$ & $-\frac{1}{x - 1}$\\
 \end{tabular}
