--- a/master.tex
+++ b/master.tex
@@ -16,5 +16,6 @@
 %    \input{./lec_08.tex}
 %    \input{./lec_09.tex}
 %    \input{./lec_10.tex}
-    \input{./lec_11.tex}
+%    \input{./lec_11.tex}
+    \input{./lec_12.tex}
 \end{document}
