--- a/master.tex
+++ b/master.tex
@@ -17,5 +17,6 @@
 %    \input{./lec_09.tex}
 %    \input{./lec_10.tex}
 %    \input{./lec_11.tex}
-    \input{./lec_12.tex}
+%    \input{./lec_12.tex}
+    \input{./lec_13.tex}
 \end{document}
