--- a/master.tex
+++ b/master.tex
@@ -18,5 +18,6 @@
 %    \input{./lec_10.tex}
 %    \input{./lec_11.tex}
 %    \input{./lec_12.tex}
-    \input{./lec_13.tex}
+%    \input{./lec_13.tex}
+    \input{./lec_14.tex}
 \end{document}
