--- a/master.tex
+++ b/master.tex
@@ -19,5 +19,6 @@
 %    \input{./lec_11.tex}
 %    \input{./lec_12.tex}
 %    \input{./lec_13.tex}
-    \input{./lec_14.tex}
+%    \input{./lec_14.tex}
+    \input{./lec_15.tex}
 \end{document}
