--- a/master.tex
+++ b/master.tex
@@ -20,5 +20,6 @@
 %    \input{./lec_12.tex}
 %    \input{./lec_13.tex}
 %    \input{./lec_14.tex}
-    \input{./lec_15.tex}
+%    \input{./lec_15.tex}
+    \input{./lec_16.tex}
 \end{document}
