--- a/master.tex
+++ b/master.tex
@@ -22,5 +22,6 @@
 %    \input{./lec_14.tex}
 %    \input{./lec_15.tex}
 %    \input{./lec_16.tex}
-    \input{./lec_17.tex}
+%    \input{./lec_17.tex}
+    \input{./lec_18.tex}
 \end{document}
