--- a/master.tex
+++ b/master.tex
@@ -24,5 +24,6 @@
 %    \input{./lec_16.tex}
 %    \input{./lec_17.tex}
 %    \input{./lec_18.tex}
-    \input{./lec_19.tex}
+%    \input{./lec_19.tex}
+    \input{./lec_20.tex}
 \end{document}
