--- a/master.tex
+++ b/master.tex
@@ -25,5 +25,6 @@
 %    \input{./lec_17.tex}
 %    \input{./lec_18.tex}
 %    \input{./lec_19.tex}
-    \input{./lec_20.tex}
+%    \input{./lec_20.tex}
+    \input{./lec_21.tex}
 \end{document}
