--- a/master.tex
+++ b/master.tex
@@ -27,5 +27,7 @@
 %    \input{./lec_19.tex}
 %    \input{./lec_20.tex}
 %    \input{./lec_21.tex}
-    \input{./lec_22.tex}
+%    \input{./lec_22.tex}
+%    \input{./lec_23.tex}
+    \input{./lec_24.tex}
 \end{document}
