--- a/master.tex
+++ b/master.tex
@@ -29,5 +29,6 @@
 %    \input{./lec_21.tex}
 %    \input{./lec_22.tex}
 %    \input{./lec_23.tex}
-    \input{./lec_24.tex}
+%    \input{./lec_24.tex}
+    \input{./lec_25.tex}
 \end{document}
