IMPROVE: revise lecture 1 and 2

--- a/master.tex
+++ b/master.tex
@@ -6,8 +6,8 @@
 \begin{document}
     \maketitle
     \tableofcontents
-%    \input{lec_01.tex}
-%    \input{lec_02.tex}
+    \input{lec_01.tex}
+    \input{lec_02.tex}
 %    \input{lec_03.tex}
 %    \input{./lec_04.tex}
 %    \input{./lec_05.tex}
@@ -30,5 +30,5 @@
 %    \input{./lec_22.tex}
 %    \input{./lec_23.tex}
 %    \input{./lec_24.tex}
-    \input{./lec_25.tex}
+%    \input{./lec_25.tex}
 \end{document}
