--- a/lec_01.tex
+++ b/lec_01.tex
@@ -1,10 +1,17 @@
-\lecture{1}{Thu 15 Sep 2020 10:15}{Introduction}
+%!TEX root = ./master.tex
+
+\lecture{1}{Week: 1}{Introduction}
+
 \subsubsection{System Definition}
-\textit{System} encompasses operating systems, database systems networking protocols and couting, compiler design and implementation, distributes systems, cloud computing and online services, bid data and machine learning frameworks. System programming is on and above the HW/SW boundary.
+\textit{System} encompasses operating systems, database systems networking protocols and routing, compiler design and implementation, distributes systems, cloud computing and online services, big data and machine learning frameworks. System programming is on and above the HW/SW boundary.
 
 \subsubsection{C Introduction}
-There are many C standards and C-like variants. In this course we use the C99 standard. Many languages have borrowed the syntax of C. C is very fast and because it is close to the metal one knows that the code is doing on to the hardware.\\
+There are many C standards and C-like variants. In this course we use the C99 standard. Many languages have borrowed the syntax of C. C is very fast and because it is close to the metal one knows what the code is doing on the hardware.
+
+Therefore, C is the language of choice for OS devs, embedded systems, tasks where speed is important etc.
+
 In contrast to e.g. Java, C does not have objects, classes, methods, interfaces, built-in types, exceptions etc. We get what the hardware gives us. Furthermore, the programmer is responsible for the memory management, garbage collection etc. In C one is also able to access the memory directly via pointers.
+
 \begin{itemize}
     \item \textbf{Comments}: \code{/*...*/} or \code{//}
     \item \textbf{Identifiers}: Same as in Java
