NEW: Start Differentiation in R^n

--- a/main.tex
+++ b/main.tex
@@ -64,5 +64,7 @@
 \begin{document}
 \begin{multicols*}{3}
     \input{general.tex}
+    \clearpage
+    \input{./diffInRn.tex}
 \end{multicols*}
 \end{document}
