IMPROVE: review lecture 1-3

--- a/lec_01.tex
+++ b/lec_01.tex
@@ -1,11 +1,11 @@
 %!TEX root = ./master.tex
 
-\lecture{1}{Week: 1}{Introduction}
+\lecture{1}{Week: 1}{Introduction SysProg and C}
 
 \subsubsection{System Definition}
 \textit{System} encompasses operating systems, database systems networking protocols and routing, compiler design and implementation, distributes systems, cloud computing and online services, big data and machine learning frameworks. System programming is on and above the HW/SW boundary.
 
-\subsubsection{C Introduction}
+\subsection*{Introduction to C}
 There are many C standards and C-like variants. In this course we use the C99 standard. Many languages have borrowed the syntax of C. C is very fast and because it is close to the metal one knows what the code is doing on the hardware.
 
 Therefore, C is the language of choice for OS devs, embedded systems, tasks where speed is important etc.
