--- a/lec_02.tex
+++ b/lec_02.tex
@@ -1,5 +1,5 @@
 %! TEX root = master.tex
-\lecture{2}{Week: 1}{Continue Introduction and Basics}
+\lecture{2}{Week: 1}{Continue Introduction C}
 
 \subsubsection{Example Code}
 Header files are external linked files. Ever program has to have \code{main} function which takes several command line options. The number of arguments if given by \code{argc} (argument count) and the arguments themselves via \code{argv} (argument vector)
@@ -52,9 +52,11 @@ switch (Expression) {
 The syntax of the three loop types available in C are as we are used to from other languages. 
 
 If the statement is just one line, they may we written as:
-\code{for (Initial; Test; Increment) Statement}
-\code{while (Expression) Statement}
-\code{do Statement while (Expression)}
+\begin{itemize}
+    \item \code{for (Initial; Test; Increment) Statement}
+    \item \code{while (Expression) Statement}
+    \item \code{do Statement while (Expression)}
+\end{itemize}
 
 \subsubsection{Other Statements}
 
