--- a/master.tex
+++ b/master.tex
@@ -8,7 +8,7 @@
     \tableofcontents
     \input{lec_01.tex}
     \input{lec_02.tex}
-%    \input{lec_03.tex}
+    \input{lec_03.tex}
 %    \input{./lec_04.tex}
 %    \input{./lec_05.tex}
 %    \input{./lec_06.tex}
